--- a/build.gradle
+++ b/build.gradle
@@ -132,6 +132,8 @@ dependencies {
         exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
     }
 
+    compile group: 'com.google.guava', name: 'guava', version: '11.0.2'
+
     compile "com.fasterxml.jackson.core:jackson-databind:2.8.7"
 
     testCompile "org.springframework.boot:spring-boot-starter-test",
