--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
+/src/main/resources/
+
 # Created by 
 https://www.gitignore.io/api/java,macos,linux,gradle,windows,eclipse,intellij,intellij+iml,visualstudiocode
 
