--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-/src/main/resources/
+/src/main/resources
 
 # Created by 
 https://www.gitignore.io/api/java,macos,linux,gradle,windows,eclipse,intellij,intellij+iml,visualstudiocode
