--- a/build.gradle
+++ b/build.gradle
@@ -66,3 +66,17 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile("org.springframework.security:spring-security-test")
 }
+group 'atinlay'
+version '1.0-SNAPSHOT'
+
+apply plugin: 'java'
+
+sourceCompatibility = 1.8
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
